--- a/pass_1a/metabolomics_data_analysis.Rmd
+++ b/pass_1a/metabolomics_data_analysis.Rmd
@@ -1018,7 +1018,7 @@ lact_res = meta_analysis_stats[
     grepl("plasma",names(meta_analysis_stats),ignore.case = T)
 ]
 lact_res_hours = sapply(names(lact_res),
-            function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
+            function(x)as.numeric(strsplit(x,split=";")[[1]][3]))
 lact_res = lact_res[order(lact_res_hours)]
 for(lact_example in names(lact_res)[1:6]){
   curr_labels = gsub("plasma,","",
@@ -1030,10 +1030,10 @@ for(lact_example in names(lact_res)[1:6]){
 }
 
 curr_labels = gsub("plasma,","",
-                     meta_analysis_stats[["glutamate,plasma,0"]][[1]][,1])
+                     meta_analysis_stats[["glutamate;plasma;0"]][[1]][,1])
 curr_labels = curr_labels[
-  meta_analysis_stats[["glutamate,plasma,0"]][[1]]$is_targeted==0]
-forest(meta_analysis_stats[["glutamate,plasma,0"]]$re_model_untar,
+  meta_analysis_stats[["glutamate;plasma;0"]][[1]]$is_targeted==0]
+forest(meta_analysis_stats[["glutamate;plasma;0"]]$re_model_untar,
         slab = curr_labels,
        main = "glutamate,plasma,0",xlab = "Log fc",
        col = "blue",cex = 1.1)
@@ -1050,7 +1050,7 @@ lact_res = meta_analysis_stats[
     grepl("plasma",names(meta_analysis_stats),ignore.case = T)
 ]
 lact_res_hours = sapply(names(lact_res),
-            function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
+            function(x)as.numeric(strsplit(x,split=";")[[1]][3]))
 lact_res = lact_res[order(lact_res_hours)]
 for(lact_example in names(lact_res)[1:6]){
   curr_labels = gsub("plasma,","",
@@ -1071,7 +1071,7 @@ lact_res = meta_analysis_stats[
     grepl("liver",names(meta_analysis_stats),ignore.case = T)
 ]
 lact_res_hours = sapply(names(lact_res),
-            function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
+            function(x)as.numeric(strsplit(x,split=";")[[1]][3]))
 lact_res = lact_res[order(lact_res_hours)]
 for(lact_example in names(lact_res)[1:6]){
   curr_labels = gsub("liver_powder,","",
@@ -1098,9 +1098,6 @@ for(lact_example in names(lact_res)[1:6]){
 <!-- } -->
 
 <!-- ``` -->
-
-
-
 
 From the plots above we take the most extreme examples and examine their forest plots.
 
